# PyChoice

./: 404.html  CONTRIBUTING.md  LICENSE  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.clinerules/: main.md
.devcontainer/: devcontainer.json
.github/workflows/: main.yml
docs/: functions.md  getting-started.md  index.md  modules.md  rules.md  tutorial.md
functions/: index.html
getting-started/: index.html
modules/: index.html
pychoice/: __init__.py  args.py  funcs.py  poset.py  rules.py  selector.py  trace.py
rules/: index.html
search/: search_index.json
tests/: test_args.py  test_combined.py  test_foo.py  test_func_init.py  test_funcs.py  test_selector.py
webtools/: package-lock.json  package.json
webtools/src/: App.css  App.tsx  main.tsx
webtools/src/assets/: trace.json
webtools/src/components/: data.tsx  registry.tsx  trace.tsx  utils.tsx
